--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,35 +1,96 @@
+# #####
+#
+# Settings.cfg - A TYPO3 Documentation Project's Configuration File
+# Information about Settings.cfg:
+#   https://docs.typo3.org/m/typo3/docs-how-to-document/master/en-us/GeneralConventions/DirectoryFilenames.html#settings-cfg
+#
+# About Syntax:
+#   See https://docs.python.org/2/library/configparser.html
+#
+# Attention:
+#   Only " ;" can start an inline comment.
+#   This is: blank PLUS semicolon!
+#
+# #####
+
 [general]
 
-project     = TYPO3 Slider Extension
-version     = 1.5.12
-release     = 1.5.12
-t3author    = Sven Wappler
-copyright   = 2014-2019
-state       = stable
+# .................................................................................
+# ...   (required) title (displayed in left sidebar (desktop) or top panel (mobile)
+# .................................................................................
 
-description =
+project     = WS Slider
 
+# .................................................................................
+# ...   (recommended) version, displayed next to title (desktop) and in <meta name="book-version"
+# .................................................................................
+
+release     = 0.2.0
+
+# .................................................................................
+# ...  (recommended) displayed in footer
+# .................................................................................
+
+copyright   = by WapplerSystems
 
 [html_theme_options]
-github_branch = master
-github_commit_hash =
-github_repository = svewap/ws_slider
-path_to_documentation_dir =
-github_revision_msg =
-github_sphinx_locale =
-project_contact =
-project_discussions =
-project_home =
-use_opensearch =
+
+# .................................................................................
+# ...  (recommended) to get the "Edit me on Github Button"
+# .................................................................................
+
+github_branch        = master
+github_repository    = svewap/ws_slider
+
+
+# .................................................................................
+# ...  (recommended) Fill in values to get links in the "Related Links" section
+# .................................................................................
+
+# usually an email address
+project_contact      = typo3YYYY@wappler.systems
+
+# URL of online discussions, you can leave this blank
+project_discussions  = https://github.com/svewap/ws_slider/issues
+
+# URL of webpage of your extension (if it has one)
+project_home         = https://github.com/svewap/ws_slider
+
+# URL to Issues
 project_issues       = https://github.com/svewap/ws_slider/issues
+
+# URL of repository
 project_repository   = https://github.com/svewap/ws_slider
 
 
 [intersphinx_mapping]
-t3tsref = http://docs.typo3.org/typo3cms/TyposcriptReference/
 
+# .................................................................................
+# for cross-referencing across manuals (intersphinx) with :ref:
+#
+# You must uncomment all manuals you use in your cross-references
+#
+# Example usage:
+#   :ref:`t3contribute:start` will link to start page of Contribution Guide
+# .................................................................................
 
-[latex_elements]
-papersize = a4paper
-pointsize = 10pt
-preamble = \usepackage
+h2document    = https://docs.typo3.org/m/typo3/docs-how-to-document/master/en-us/
+# t3coreapi     = https://docs.typo3.org/m/typo3/reference-coreapi/master/en-us/
+# t3editors     = https://docs.typo3.org/m/typo3/tutorial-editors/master/en-us/
+# t3extbasebook = https://docs.typo3.org/m/typo3/book-extbasefluid/master/en-us/Index.html
+t3install     = https://docs.typo3.org/m/typo3/guide-installation/master/en-us/
+# t3l10n        = https://docs.typo3.org/m/typo3/guide-frontendlocalization/master/en-us/
+# t3start       = https://docs.typo3.org/m/typo3/tutorial-getting-started/master/en-us/
+# t3sitepackage = https://docs.typo3.org/m/typo3/tutorial-sitepackage/master/en-us/
+# t3tca         = https://docs.typo3.org/m/typo3/reference-tca/master/en-us/
+# t3templating  = https://docs.typo3.org/m/typo3/tutorial-templating-with-fluid/master/en-us/
+# t3ts45        = https://docs.typo3.org/m/typo3/tutorial-typoscript-in-45-minutes/master/en-us/
+# t3tsconfig    = https://docs.typo3.org/m/typo3/reference-tsconfig/master/en-us/
+t3tsref       = https://docs.typo3.org/m/typo3/reference-typoscript/master/en-us/
+
+[extensions]
+
+# This is required for embedding YouTube videos
+
+any_name_youtube = sphinxcontrib.youtube
+
