Update Crowdin configuration file

--- a/.crowdin.yml
+++ b/.crowdin.yml
@@ -1,4 +1,4 @@
-commit_message: "Fix: New translations %original_file_name% from Crowdin"
+commit_message: 'Fix: New translations %original_file_name% from Crowdin'
 files:
   - source: /Resources/Private/Language/flexslider*.xlf
     translation: /%original_path%/%two_letters_code%.%original_file_name%
