--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 		"source": "https://github.com/svewap/ws_slider"
 	},
 	"require": {
-		"typo3/cms-core": "^8.7 || ^9.5 || ^10.0 || 10.*@dev"
+		"typo3/cms-core": "^9.5 || ^10.0 || 10.*@dev"
 	},
 	"extra": {
 		"typo3/cms": {
