--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
 		"typo3",
 		"TYPO3 CMS",
 		"Flexslider",
-		"owl"
+		"owl",
+		"slick",
+		"tinyslider"
 	],
 	"homepage": "https://github.com/svewap/ws_slider",
 	"authors": [
