--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 		"source": "https://github.com/svewap/ws_slider"
 	},
 	"require": {
-		"typo3/cms-core": "^9.5 || ^10.0 || ^11.0"
+		"typo3/cms-core": "^10.0 || ^11.0"
 	},
 	"extra": {
 		"typo3/cms": {
