--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	"homepage": "https://github.com/wapplersystems/ws_slider",
 	"authors": [
 		{
-			"name": "Sven Wappler",
+			"name": "Sven Wappler and Contributors",
 			"email": "typo3YYYY@wappler.systems"
 		}
 	],
