--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "wapplersystems/ws-slider",
 	"type": "typo3-cms-extension",
 	"description": "universal slider extension for owl, flexslider, ...",
-	"license": "GPL-2.0+",
+	"license": "GPL-2.0-or-later",
 	"keywords": [
 		"typo3",
 		"TYPO3 CMS",
